--- a/project5/latex/report.tex
+++ b/project5/latex/report.tex
@@ -113,9 +113,103 @@ TODO
 % ===========================================
 \section{Results and discussion}\label{sec:results}
 %
-TODO
+\begin{figure}[H]
+	\centering
+	\includegraphics[scale=0.5]{../figures/prob_deviation_0_slits.pdf} %Imports the figure.
+	\caption{}
+	\label{fig:dev_0_slits}
+\end{figure}
+
+\begin{figure}[H]
+	\centering
+	\includegraphics[scale=0.5]{../figures/prob_deviation_2_slits.pdf} %Imports the figure.
+	\caption{}
+	\label{fig:dev_2_slits}
+\end{figure}	
 	
-	
+\begin{figure}[H]
+	\centering
+	\includegraphics[scale=0.5]{../figures/particle_prob_at_time_0.pdf} %Imports the figure.
+	\caption{}
+	\label{fig:particle_t_0}
+\end{figure}
+
+\begin{figure}[H]
+	\centering
+	\includegraphics[scale=0.5]{../figures/particle_prob_at_time_1e-3.pdf} %Imports the figure.
+	\caption{}
+	\label{fig:particle_t_1}
+\end{figure}
+
+\begin{figure}[H]
+	\centering
+	\includegraphics[scale=0.5]{../figures/particle_prob_at_time_2e-3.pdf} %Imports the figure.
+	\caption{}
+	\label{fig:particle_t_2}
+\end{figure}
+
+\begin{figure}[H]
+	\centering
+	\includegraphics[scale=0.5]{../figures/U_real_at_time_0.pdf} %Imports the figure.
+	\caption{}
+	\label{fig:Re_t_0}
+\end{figure}
+
+\begin{figure}[H]
+	\centering
+	\includegraphics[scale=0.5]{../figures/U_real_at_time_1e-3.pdf} %Imports the figure.
+	\caption{}
+	\label{fig:Re_t_1}
+\end{figure}
+
+\begin{figure}[H]
+	\centering
+	\includegraphics[scale=0.5]{../figures/U_real_at_time_2e-3.pdf} %Imports the figure.
+	\caption{}
+	\label{fig:Re_t_2}
+\end{figure}
+
+\begin{figure}[H]
+	\centering
+	\includegraphics[scale=0.5]{../figures/U_imag_at_time_0.pdf} %Imports the figure.
+	\caption{}
+	\label{fig:Im_t_0}
+\end{figure}
+
+\begin{figure}[H]
+	\centering
+	\includegraphics[scale=0.5]{../figures/U_imag_at_time_1e-3.pdf} %Imports the figure.
+	\caption{}
+	\label{fig:Im_t_1}
+\end{figure}
+
+\begin{figure}[H]
+	\centering
+	\includegraphics[scale=0.5]{../figures/U_imag_at_time_2e-3.pdf} %Imports the figure.
+	\caption{}
+	\label{fig:Im_t_2}
+\end{figure}
+
+\begin{figure}[H]
+	\centering
+	\includegraphics[scale=0.5]{../figures/detector_screen_with_2_slits.pdf} %Imports the figure.
+	\caption{}
+	\label{fig:prob_2_slits}
+\end{figure}
+
+\begin{figure}[H]
+	\centering
+	\includegraphics[scale=0.5]{../figures/detector_screen_with_1_slits.pdf} %Imports the figure.
+	\caption{}
+	\label{fig:prob_1_slits}
+\end{figure}
+
+\begin{figure}[H]
+	\centering
+	\includegraphics[scale=0.5]{../figures/detector_screen_with_3_slits.pdf} %Imports the figure.
+	\caption{}
+	\label{fig:prob_3_slits}
+\end{figure}
 % ===========================================
 \section{Conclusion}\label{sec:conclusion}
 %
